# llm-inference-tutorial

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GETTING_STARTED.md  Makefile  README.md  TUTORIAL.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pre-commit.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INFERENCE.md
scripts/: test_api.sh
src/: __init__.py  config.py  inference.py  main.py  models.py
tests/: __init__.py  test_api.py  test_api_integration.py  test_config.py  test_inference.py  test_models.py
